fdo#50665 fdo#37063 rtftok: don't ignore character properties of text fields

Also fixes: n#760764

(Cherry-picked from commits 9486851 and b9508dd.)

Signed-off-by: Fridrich Štrba <fridrich.strba@bluewin.ch>